# Session-Meter

./: .gitattributes  .gitignore  CHANGELOG.en.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  index.html  menu.html  news.html  package-lock.json  package.json  settings.html  stats.html  style.html  tsconfig.json  vite.config.ts  widget.html
.github/workflows/: build.yml  pages.yml
docs/: AUTO_UPDATE.md  DATA_CAPABILITIES.md  index.html
src/: Index.svelte
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json  titlebar.json  widget.json
src-tauri/icons/: icon.icns
src-tauri/src/: antigravity.rs  api.rs  auth.rs  commands.rs  config.rs  dock.rs  error.rs  gemini.rs  gemini_helper.rs  history.rs  i18n.rs  icon.rs  lib.rs  main.rs  notify.rs  poller.rs  service.rs  state.rs  theme.rs  tray.rs  update.rs  usage.rs  windows.rs
src/entries/: index.ts  menu.ts  news.ts  settings.ts  stats.ts  style.ts  widget.ts
src/lib/: TitleBar.svelte  appinit.ts  boot.ts  changelog.ts  charts.ts  countdown.ts  fonts.ts  forecast.ts  i18n.ts  ipc.ts  stores.ts  theme.ts
src/lib/widgetStyles/: ConcentricRings.svelte  DualSemiArc.svelte  FocusSlim.svelte  HexRings.svelte  InfoGrid.svelte  VerticalPillars.svelte  WidgetStyle.svelte  types.ts
src/menu/: Menu.svelte
src/news/: News.svelte
src/settings/: Settings.svelte
src/stats/: Stats.svelte
src/style/: Style.svelte
src/styles/: theme.css
src/widget/: Widget.svelte
