[package]
name = "sessionmeter"
version = "0.4.4"
description = "Claude and Gemini usage tray, widget, and stats for the desktop"
authors = ["soma0sd"]
license = "MIT"
repository = "https://github.com/soma0sd/Session-Meter"
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (required on Windows,
# see https://github.com/rust-lang/cargo/issues/8519).
name = "sessionmeter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["time", "sync", "net", "io-util"] }

tiny-skia = "0.11"
ab_glyph = "0.2"

# Out-of-process Gemini login/scrape helper (see gemini_helper.rs). Pinned to the same versions
# Tauri already pulls in transitively so there is no duplicate build. The helper hosts the Google
# webview in a SEPARATE process/UI thread so a page that wedges WebView2 cannot freeze the app.
tao = "0.35"
wry = "0.55"

thiserror = "2"
url = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Security_Cryptography",
  "Win32_System_Threading",
] }

[dependencies.tauri-plugin-single-instance]
version = "2"
